# event-library

./: README.md  pyproject.toml  rename_map.py  visual_notes.py
src/state_detection/: events.py  wave_pipeline.py  waves.py
src/state_detection/config/: pipeline.py  plot.py
src/state_detection/operators/: events.py  measures.py
src/state_detection/wave_pipeline/: wave_summary.py  waves.py
