[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "state-detection"
version = "0.1.0"
description = "A state-building protocol for Pandas"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]